# libpng_fuzz_LibAFLPT

./: .gitignore  .gitmodules  Cargo.toml  build.rs  libpng_read_fuzzer.cc  wrapper.h
src/: main.rs
