[package]
name = "intel_pt_libpng"
authors = ["Marco Cavenati <cavenatimarco@gmail.com>"]
edition = "2021"

[dependencies]
libafl = { path = "../LibAFL/crates/libafl", features = [
  "intel_pt",
  "tui_monitor",
] }
libafl_bolts = { path = "../LibAFL/crates/libafl_bolts" }
proc-maps = "0.4.0"
env_logger = "0.11.10"
libz-sys = { version = "1.1.29", features = ["static"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.62.2"

[build-dependencies]
cc = "1.2.60"
cmake = "0.1.58"

[profile.release]
lto = true
codegen-units = 1
